--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.24)
 project(luka)
 
 add_subdirectory(third_party)
+add_subdirectory(resource)
 add_subdirectory(engine)
