--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,10 +1,3 @@
 {
-  "asset": {
-    "model": "viking_room.obj",
-    "shader": {
-      "vertex": "shader.vert.spv",
-      "fragment": "shader.frag.spv"
-    },
-    "texture": "viking_room.png"
-  }
+  "model":""
 }
