--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -16,7 +16,7 @@ set(HEADER_FILES
   resource/config/config.h
   function/function_input/function_input.h
   function/physics/physics.h
-  function/rendering/instance.h
+  function/rendering/gpu.h
   function/rendering/rendering.h
   function/time/time.h
   function/window/window.h
@@ -35,7 +35,7 @@ set(SOURCE_FILES
   resource/config/config.cc
   function/function_input/function_input.cc
   function/physics/physics.cc
-  function/rendering/instance.cc
+  function/rendering/gpu.cc
   function/rendering/rendering.cc
   function/time/time.cc
   function/window/window.cc
