--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -18,6 +18,7 @@ set(HEADER_FILES
   resource/config/config.h
   function/function_input/function_input.h
   function/physics/physics.h
+  function/rendering/camera.h
   function/rendering/common.h
   function/rendering/dynamic_buffer.h
   function/rendering/gpu.h
@@ -43,6 +44,7 @@ set(SOURCE_FILES
   resource/config/config.cc
   function/function_input/function_input.cc
   function/physics/physics.cc
+  function/rendering/camera.cc
   function/rendering/common.cc
   function/rendering/dynamic_buffer.cc
   function/rendering/gpu.cc
