--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,49 +5,24 @@
       "name": "Windows Debug",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/engine/luka_engine",
+      "program": "${workspaceFolder}/build/engine/Debug/luka_engine",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
-      "console": "internalConsole",
-      "preLaunchTask": "Pre Debug"
-    },
-    {
-      "name": "Windows release",
-      "type": "cppvsdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/build/engine/luka_engine",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "console": "internalConsole",
-      "preLaunchTask": "Pre Release"
+      "preLaunchTask": "CMake task"
     },
     {
       "name": "macOS Debug",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/engine/luka_engine",
+      "program": "${workspaceFolder}/build/engine/Debug/luka_engine",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
       "MIMode": "lldb",
-      "preLaunchTask": "Pre Debug"
+      "preLaunchTask": "CMake task"
     },
-    {
-      "name": "macOS Release",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/build/engine/luka_engine",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "MIMode": "lldb",
-      "preLaunchTask": "Pre Release"
-    }
   ]
 }
