Add pipeline and geometry

--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -3,6 +3,8 @@
   "scenes": [
     {
       "model": "buster_drone/busterDrone.gltf",
+      "vertex_shader": "shader.vert.spv",
+      "fragment_shader": "shader.frag.spv",
       "camera": {
         "from": [
           0,
@@ -13,21 +15,6 @@
           0,
           0,
           0
-        ]
-      }
-    },
-    {
-      "model": "buster_drone/busterDrone.gltf",
-      "camera": {
-        "from": [
-          5.13694048,
-          1.89175785,
-          -1.40289795
-        ],
-        "to": [
-          0.703276634,
-          1.02280307,
-          0.218072295
         ]
       }
     }
