--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,8 +1,10 @@
 {
   "scene": 0,
   "scenes": [
-    {
-      "model": "sponza/Sponza.gltf",
+    { 
+      "skybox": "",
+      "enviroment": "",
+      "object": "sponza/Sponza.gltf",
       "vertex_shader": "shader.vert.spv",
       "fragment_shader": "shader.frag.spv",
       "camera": {
