--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -1,24 +1,11 @@
 {
-  "scene": 0,
-  "scenes": [
-    { 
-      "skybox": "",
-      "enviroment": "",
-      "object": "sponza/Sponza.gltf",
-      "vertex_shader": "shader.vert.spv",
-      "fragment_shader": "shader.frag.spv",
-      "camera": {
-        "from": [
-          0,
-          0,
-          3.5
-        ],
-        "to": [
-          0,
-          0,
-          0
-        ]
-      }
+  "config": 0,
+  "configs": [
+    {
+      "enviroment_path": "texture/papermill.ktx",
+      "skybox_path": "model/box/Box.gltf",
+      "object_path": "model/damaged_helmet/DamagedHelmet.gltf",
+      "shader_path": "shader/pbr/generated"
     }
   ]
 }
