--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "third_party/stb"]
 	path = third_party/stb
 	url = https://github.com/nothings/stb.git
+[submodule "third_party/ktx"]
+	path = third_party/ktx
+	url = https://github.com/KhronosGroup/KTX-Software.git
