--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -87,3 +87,11 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_link_libraries(${PROJECT_NAME} PRIVATE luka_third_party)
 target_precompile_headers(${PROJECT_NAME} PRIVATE platform/pch.h)
+
+foreach(DLL_FILE ${DLL_FILES})
+  add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${DLL_FILE}
+    $<TARGET_FILE_DIR:${PROJECT_NAME}>
+  )
+endforeach()
