--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -29,6 +29,7 @@ set(HEADER_FILES
   function/scene_graph/free_camera.h
   function/scene_graph/image.h
   function/scene_graph/light.h
+  function/scene_graph/material.h
   function/scene_graph/node.h
   function/scene_graph/sampler.h
   function/scene_graph/scene_graph.h
@@ -65,6 +66,7 @@ set(SOURCE_FILES
   function/scene_graph/free_camera.cc
   function/scene_graph/image.cc
   function/scene_graph/light.cc
+  function/scene_graph/material.cc
   function/scene_graph/node.cc
   function/scene_graph/sampler.cc
   function/scene_graph/scene_graph.cc
