Add spirv cross

--- a/resource/config/config.json
+++ b/resource/config/config.json
@@ -3,7 +3,7 @@
   "configs": [
     {
       "object_path": "model/sponza/Sponza.gltf",
-      "shader_path": "shader/pbr/generated"
+      "shader_path": "shader/base"
     }
   ]
 }
