--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(luka)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(third_party)
-add_subdirectory(resource)
+# add_subdirectory(resource)
 add_subdirectory(engine)
