--- a/engine/resource/config/source_path.h.in
+++ b/engine/resource/config/source_path.h.in
@@ -1,5 +1,5 @@
-#ifndef DEBUG
-#define LUKA_SOURCE_PATH "."
-#else
+#ifndef NDEBUG
 #define LUKA_SOURCE_PATH "@CMAKE_SOURCE_DIR@"
+#else
+#define LUKA_SOURCE_PATH "."
 #endif
